# vellum-cli

./: .gitignore  Cargo.toml  Dockerfile  README.md  bootstrap.sh  build.rs
.github/workflows/: release.yml
src/: constants.rs  main.rs  util.rs
src/apk/: compat.rs  exec.rs  index.rs  mod.rs  package.rs  version.rs
src/commands/: add.rs  check_os.rs  del.rs  mod.rs  reenable.rs  self_uninstall.rs  testing.rs  upgrade.rs
src/device/: detect.rs  mod.rs
src/repo/: local.rs  mod.rs
src/state/: mod.rs
